--- a/hugo.toml
+++ b/hugo.toml
@@ -13,17 +13,17 @@ enableEmoji = true
 #disqusShortname = "dudung-github-io-blog"
 
 [params]
-author = "Sparisoma Viridi"
+author = "Reinaldo Ulian"
 # license = '<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA-4.0</a>'
-description = "Sparisoma Viridi's personal website"
+description = "Reinaldo Ulian's personal website"
 keywords = "blog,developer,personal"
-info = ["Physicist", "Programmer"]
+info = ["Physicist", "Programmer","Weightlifter","Most Handsome man on earth]
 
-avatarURL = "img/avatar.svg"
+avatarURL = "img/avatar1.svg"
 
 #gravatar = "john.doe@example.com"
 dateFormat = "January 2, 2006"
-since = 2022
+since = 2023
 # Git Commit in Footer, uncomment the line below to enable it
 commit = "https://github.com/luizdepra/hugo-coder/tree/"
 # Right To Left, shift content direction for languagues such as Arabic
@@ -116,7 +116,7 @@ author = "authors"
 name = "Github"
 icon = "fa fa-2x fa-github"
 weight = 0
-url = "https://github.com/dudung/"
+url = "https://github.com/birongzah/"
 
 [[params.social]]
 name = "Flickr"
